QtBeef/src/Qt/qsortfilterproxymodel.bf

extension CQt
{
	[LinkName("QSortFilterProxyModel_new")]
	public static extern QSortFilterProxyModel_Ptr* QSortFilterProxyModel_new();
	[LinkName("QSortFilterProxyModel_new2")]
	public static extern QSortFilterProxyModel_Ptr* QSortFilterProxyModel_new2(QObject_Ptr* parent);
	[LinkName("QSortFilterProxyModel_Delete")]
	public static extern void QSortFilterProxyModel_Delete(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_MetaObject")]
	public static extern QMetaObject_Ptr* QSortFilterProxyModel_MetaObject(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_Qt_Metacast")]
	public static extern void* QSortFilterProxyModel_Qt_Metacast(QSortFilterProxyModel_Ptr* self, c_char* param1);
	[LinkName("QSortFilterProxyModel_Qt_Metacall")]
	public static extern c_int QSortFilterProxyModel_Qt_Metacall(QSortFilterProxyModel_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QSortFilterProxyModel_Tr")]
	public static extern libqt_string QSortFilterProxyModel_Tr(c_char* s);
	[LinkName("QSortFilterProxyModel_SetSourceModel")]
	public static extern void QSortFilterProxyModel_SetSourceModel(QSortFilterProxyModel_Ptr* self, QAbstractItemModel_Ptr* sourceModel);
	[LinkName("QSortFilterProxyModel_MapToSource")]
	public static extern QModelIndex_Ptr QSortFilterProxyModel_MapToSource(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* proxyIndex);
	[LinkName("QSortFilterProxyModel_MapFromSource")]
	public static extern QModelIndex_Ptr QSortFilterProxyModel_MapFromSource(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* sourceIndex);
	[LinkName("QSortFilterProxyModel_MapSelectionToSource")]
	public static extern QItemSelection_Ptr QSortFilterProxyModel_MapSelectionToSource(QSortFilterProxyModel_Ptr* self, QItemSelection_Ptr* proxySelection);
	[LinkName("QSortFilterProxyModel_MapSelectionFromSource")]
	public static extern QItemSelection_Ptr QSortFilterProxyModel_MapSelectionFromSource(QSortFilterProxyModel_Ptr* self, QItemSelection_Ptr* sourceSelection);
	[LinkName("QSortFilterProxyModel_FilterRegularExpression")]
	public static extern QRegularExpression_Ptr QSortFilterProxyModel_FilterRegularExpression(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_FilterKeyColumn")]
	public static extern c_int QSortFilterProxyModel_FilterKeyColumn(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetFilterKeyColumn")]
	public static extern void QSortFilterProxyModel_SetFilterKeyColumn(QSortFilterProxyModel_Ptr* self, c_int column);
	[LinkName("QSortFilterProxyModel_FilterCaseSensitivity")]
	public static extern Qt_CaseSensitivity QSortFilterProxyModel_FilterCaseSensitivity(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetFilterCaseSensitivity")]
	public static extern void QSortFilterProxyModel_SetFilterCaseSensitivity(QSortFilterProxyModel_Ptr* self, Qt_CaseSensitivity cs);
	[LinkName("QSortFilterProxyModel_SortCaseSensitivity")]
	public static extern Qt_CaseSensitivity QSortFilterProxyModel_SortCaseSensitivity(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetSortCaseSensitivity")]
	public static extern void QSortFilterProxyModel_SetSortCaseSensitivity(QSortFilterProxyModel_Ptr* self, Qt_CaseSensitivity cs);
	[LinkName("QSortFilterProxyModel_IsSortLocaleAware")]
	public static extern bool QSortFilterProxyModel_IsSortLocaleAware(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetSortLocaleAware")]
	public static extern void QSortFilterProxyModel_SetSortLocaleAware(QSortFilterProxyModel_Ptr* self, bool on);
	[LinkName("QSortFilterProxyModel_SortColumn")]
	public static extern c_int QSortFilterProxyModel_SortColumn(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SortOrder")]
	public static extern Qt_SortOrder QSortFilterProxyModel_SortOrder(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_DynamicSortFilter")]
	public static extern bool QSortFilterProxyModel_DynamicSortFilter(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetDynamicSortFilter")]
	public static extern void QSortFilterProxyModel_SetDynamicSortFilter(QSortFilterProxyModel_Ptr* self, bool enable);
	[LinkName("QSortFilterProxyModel_SortRole")]
	public static extern c_int QSortFilterProxyModel_SortRole(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetSortRole")]
	public static extern void QSortFilterProxyModel_SetSortRole(QSortFilterProxyModel_Ptr* self, c_int role);
	[LinkName("QSortFilterProxyModel_FilterRole")]
	public static extern c_int QSortFilterProxyModel_FilterRole(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetFilterRole")]
	public static extern void QSortFilterProxyModel_SetFilterRole(QSortFilterProxyModel_Ptr* self, c_int role);
	[LinkName("QSortFilterProxyModel_IsRecursiveFilteringEnabled")]
	public static extern bool QSortFilterProxyModel_IsRecursiveFilteringEnabled(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetRecursiveFilteringEnabled")]
	public static extern void QSortFilterProxyModel_SetRecursiveFilteringEnabled(QSortFilterProxyModel_Ptr* self, bool recursive);
	[LinkName("QSortFilterProxyModel_AutoAcceptChildRows")]
	public static extern bool QSortFilterProxyModel_AutoAcceptChildRows(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_SetAutoAcceptChildRows")]
	public static extern void QSortFilterProxyModel_SetAutoAcceptChildRows(QSortFilterProxyModel_Ptr* self, bool accept);
	[LinkName("QSortFilterProxyModel_SetFilterRegularExpression")]
	public static extern void QSortFilterProxyModel_SetFilterRegularExpression(QSortFilterProxyModel_Ptr* self, libqt_string* pattern);
	[LinkName("QSortFilterProxyModel_SetFilterRegularExpression2")]
	public static extern void QSortFilterProxyModel_SetFilterRegularExpression2(QSortFilterProxyModel_Ptr* self, QRegularExpression_Ptr* regularExpression);
	[LinkName("QSortFilterProxyModel_SetFilterWildcard")]
	public static extern void QSortFilterProxyModel_SetFilterWildcard(QSortFilterProxyModel_Ptr* self, libqt_string* pattern);
	[LinkName("QSortFilterProxyModel_SetFilterFixedString")]
	public static extern void QSortFilterProxyModel_SetFilterFixedString(QSortFilterProxyModel_Ptr* self, libqt_string* pattern);
	[LinkName("QSortFilterProxyModel_Invalidate")]
	public static extern void QSortFilterProxyModel_Invalidate(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_FilterAcceptsRow")]
	public static extern bool QSortFilterProxyModel_FilterAcceptsRow(QSortFilterProxyModel_Ptr* self, c_int source_row, QModelIndex_Ptr* source_parent);
	[LinkName("QSortFilterProxyModel_FilterAcceptsColumn")]
	public static extern bool QSortFilterProxyModel_FilterAcceptsColumn(QSortFilterProxyModel_Ptr* self, c_int source_column, QModelIndex_Ptr* source_parent);
	[LinkName("QSortFilterProxyModel_LessThan")]
	public static extern bool QSortFilterProxyModel_LessThan(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* source_left, QModelIndex_Ptr* source_right);
	[LinkName("QSortFilterProxyModel_InvalidateFilter")]
	public static extern void QSortFilterProxyModel_InvalidateFilter(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_InvalidateRowsFilter")]
	public static extern void QSortFilterProxyModel_InvalidateRowsFilter(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_InvalidateColumnsFilter")]
	public static extern void QSortFilterProxyModel_InvalidateColumnsFilter(QSortFilterProxyModel_Ptr* self);
	[LinkName("QSortFilterProxyModel_Index")]
	public static extern QModelIndex_Ptr QSortFilterProxyModel_Index(QSortFilterProxyModel_Ptr* self, c_int row, c_int column, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_Parent")]
	public static extern QModelIndex_Ptr QSortFilterProxyModel_Parent(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* child);
	[LinkName("QSortFilterProxyModel_Sibling")]
	public static extern QModelIndex_Ptr QSortFilterProxyModel_Sibling(QSortFilterProxyModel_Ptr* self, c_int row, c_int column, QModelIndex_Ptr* idx);
	[LinkName("QSortFilterProxyModel_RowCount")]
	public static extern c_int QSortFilterProxyModel_RowCount(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_ColumnCount")]
	public static extern c_int QSortFilterProxyModel_ColumnCount(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_HasChildren")]
	public static extern bool QSortFilterProxyModel_HasChildren(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_Data")]
	public static extern QVariant_Ptr QSortFilterProxyModel_Data(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* index, c_int role);
	[LinkName("QSortFilterProxyModel_SetData")]
	public static extern bool QSortFilterProxyModel_SetData(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* index, QVariant_Ptr* value, c_int role);
	[LinkName("QSortFilterProxyModel_HeaderData")]
	public static extern QVariant_Ptr QSortFilterProxyModel_HeaderData(QSortFilterProxyModel_Ptr* self, c_int section, Qt_Orientation orientation, c_int role);
	[LinkName("QSortFilterProxyModel_SetHeaderData")]
	public static extern bool QSortFilterProxyModel_SetHeaderData(QSortFilterProxyModel_Ptr* self, c_int section, Qt_Orientation orientation, QVariant_Ptr* value, c_int role);
	[LinkName("QSortFilterProxyModel_MimeData")]
	public static extern QMimeData_Ptr* QSortFilterProxyModel_MimeData(QSortFilterProxyModel_Ptr* self, void** indexes);
	[LinkName("QSortFilterProxyModel_DropMimeData")]
	public static extern bool QSortFilterProxyModel_DropMimeData(QSortFilterProxyModel_Ptr* self, QMimeData_Ptr* data, Qt_DropAction action, c_int row, c_int column, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_InsertRows")]
	public static extern bool QSortFilterProxyModel_InsertRows(QSortFilterProxyModel_Ptr* self, c_int row, c_int count, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_InsertColumns")]
	public static extern bool QSortFilterProxyModel_InsertColumns(QSortFilterProxyModel_Ptr* self, c_int column, c_int count, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_RemoveRows")]
	public static extern bool QSortFilterProxyModel_RemoveRows(QSortFilterProxyModel_Ptr* self, c_int row, c_int count, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_RemoveColumns")]
	public static extern bool QSortFilterProxyModel_RemoveColumns(QSortFilterProxyModel_Ptr* self, c_int column, c_int count, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_FetchMore")]
	public static extern void QSortFilterProxyModel_FetchMore(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_CanFetchMore")]
	public static extern bool QSortFilterProxyModel_CanFetchMore(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QSortFilterProxyModel_Flags")]
	public static extern void* QSortFilterProxyModel_Flags(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QSortFilterProxyModel_Buddy")]
	public static extern QModelIndex_Ptr QSortFilterProxyModel_Buddy(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QSortFilterProxyModel_Match")]
	public static extern void* QSortFilterProxyModel_Match(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* start, c_int role, QVariant_Ptr* value, c_int hits, void* flags);
	[LinkName("QSortFilterProxyModel_Span")]
	public static extern QSize_Ptr QSortFilterProxyModel_Span(QSortFilterProxyModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QSortFilterProxyModel_Sort")]
	public static extern void QSortFilterProxyModel_Sort(QSortFilterProxyModel_Ptr* self, c_int column, Qt_SortOrder order);
	[LinkName("QSortFilterProxyModel_MimeTypes")]
	public static extern void* QSortFilterProxyModel_MimeTypes(QSortFilterProxyModel_Ptr* self);
